tests/errors/sem_test16.py
# sem_test16.py 
test = 5
test /= "hey"
print(test)